scraper/tests/trybuild/no_detached_redfish_command.rs
use nv_redfish_scraper::adapter::redfish::DetachedCommand;

fn main() {
    let _ = core::mem::size_of::<DetachedCommand>();
}
